--- a/arch/arm64/configs/hisi_3660_defconfig
+++ b/arch/arm64/configs/hisi_3660_defconfig
@@ -4405,10 +4405,10 @@ CONFIG_CONTEXTHUB_SHMEM=y
 # HISI FLP configuration
 #
 CONFIG_HISI_FLP=y
-CONFIG_HUAWEI_BFM=y
+# CONFIG_HUAWEI_BFM is not set
 CONFIG_HW_BFMR_HISI=y
 # CONFIG_HW_BFMR_QCOM is not set
-CONFIG_USE_BOOTFAIL_RECOVERY_SOLUTION=y
+# CONFIG_USE_BOOTFAIL_RECOVERY_SOLUTION is not set
 CONFIG_HW_GADGET=y
 CONFIG_LCDKIT_DRIVER=y
 CONFIG_HUAWEI_HOST_TS_KIT=y
