--- a/arch/arm64/configs/hisi_3660_defconfig
+++ b/arch/arm64/configs/hisi_3660_defconfig
@@ -256,14 +256,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
-CONFIG_MODULE_UNLOAD=y
-# CONFIG_MODULE_FORCE_UNLOAD is not set
-# CONFIG_MODVERSIONS is not set
-# CONFIG_MODULE_SRCVERSION_ALL is not set
-# CONFIG_MODULE_SIG is not set
-# CONFIG_MODULE_COMPRESS is not set
+# CONFIG_MODULES is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_BLK_DEV_BSG=y
@@ -299,7 +292,7 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_TEST=m
+# CONFIG_IOSCHED_TEST is not set
 # CONFIG_CFQ_GROUP_IOSCHED is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_ROW=y
@@ -1412,10 +1405,10 @@ CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_KIRIN=y
 CONFIG_SCSI_UFS_KIRIN_LINERESET_CHECK=y
-CONFIG_SCSI_UFS_TEST=m
+# CONFIG_SCSI_UFS_TEST is not set
 CONFIG_SCSI_UFS_INLINE_CRYPTO=y
 CONFIG_SCSI_UFS_HS_ERROR_RECOVER=y
-CONFIG_SCSI_UFS_BLOCK_TEST=m
+CONFIG_SCSI_UFS_BLOCK_TEST=y
 CONFIG_HUAWEI_UFS_DSM=y
 CONFIG_UFS_DEVICE_RELATED_CONFIGS=y
 # CONFIG_SCSI_UFS_KIRIN_V21 is not set
@@ -1651,7 +1644,7 @@ CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_FILTER=y
 CONFIG_PPP_MPPE=y
 CONFIG_PPP_MULTILINK=y
-CONFIG_PPPOE=m
+CONFIG_PPPOE=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 CONFIG_PPP_ASYNC=y
@@ -4246,7 +4239,7 @@ CONFIG_LOG_JANK=y
 CONFIG_HWLOG_KERNEL=y
 # CONFIG_HW_STAT_MM is not set
 CONFIG_HW_CROSSLAYER_OPT=y
-CONFIG_HW_CROSSLAYER_OPT_DBG=m
+CONFIG_HW_CROSSLAYER_OPT_DBG=y
 CONFIG_HW_WIFIPRO=y
 CONFIG_HW_WIFIPRO_PROC=y
 CONFIG_HW_WIFI=y
@@ -4389,7 +4382,7 @@ CONFIG_CONNECTIVITY_HI110X_HI3660=y
 CONFIG_HI110X_SDIO_STD_CARD_SUPPORT=y
 CONFIG_HI110X_SDIO_FPGA=y
 CONFIG_HI110X_SDIO_DETECT_FUNCTION=y
-CONFIG_HI1102_PLATFORM=m
+CONFIG_HI1102_PLATFORM=y
 CONFIG_HI1102_PLAT_HW_CHR=y
 CONFIG_HI1102_PLAT_OAL=y
 CONFIG_HI1102_PLAT_FRW=y
@@ -4398,7 +4391,7 @@ CONFIG_HI1102_PLAT_SDT=y
 CONFIG_HI1102_PLAT_PS=y
 CONFIG_HI1102_PLAT_PM=y
 CONFIG_HI1102_PLAT_MAIN=y
-CONFIG_HI1102_WIFI=m
+CONFIG_HI1102_WIFI=y
 CONFIG_HI1102_WIFI_HMAC=y
 CONFIG_HI1102_WIFI_WAL=y
 CONFIG_HI1102_WIFI_MAIN=y
