--- a/arch/arm64/configs/hisi_3660_defconfig
+++ b/arch/arm64/configs/hisi_3660_defconfig
@@ -4406,7 +4406,7 @@ CONFIG_CONTEXTHUB_SHMEM=y
 #
 CONFIG_HISI_FLP=y
 # CONFIG_HUAWEI_BFM is not set
-CONFIG_HW_BFMR_HISI=y
+# CONFIG_HW_BFMR_HISI is not set
 # CONFIG_HW_BFMR_QCOM is not set
 # CONFIG_USE_BOOTFAIL_RECOVERY_SOLUTION is not set
 CONFIG_HW_GADGET=y
